--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -9,3 +9,8 @@ body {
 .btn {
     @apply whitespace-nowrap inline-flex items-center justify-center px-4 py-2 rounded-md shadow-sm text-base font-bold text-white bg-lime-4 hover:bg-lime-5 focus:ring-lime-4 focus:ring-offset-2 focus:ring-2 focus:outline-none
 }
+
+.h-section {
+    height: 700px;
+    max-height: 100vh;
+}
