--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -2,15 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    font-family: Helvetica;
-}
-
 .btn {
     @apply whitespace-nowrap inline-flex items-center justify-center px-4 py-2 rounded-md shadow-sm text-base font-bold text-white bg-lime-4 hover:bg-lime-5 focus:ring-lime-4 focus:ring-offset-2 focus:ring-2 focus:outline-none
 }
 
-.h-section {
-    height: 700px;
-    max-height: 100vh;
+.why-us-item {
+    @apply flex flex-col p-4 rounded-md border border-neutral-2 gap-4;
 }
